Fixing breadcrumb and nav layout issue

--- a/src/targets/sandman/styles/components/dropdowns.less
+++ b/src/targets/sandman/styles/components/dropdowns.less
@@ -2,6 +2,9 @@
   .dropdown-menu {
   	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
     top: 35px;
+    .sticky-bread & {
+      top:30px;
+    }
 
     li[currency-list] &,
     li[currency-list] &{
