--- a/src/targets/sandman/styles/views/breadcrumbs.less
+++ b/src/targets/sandman/styles/views/breadcrumbs.less
@@ -1,7 +1,11 @@
 /////////////////////
 //// BREADCRUMBS ////
 /////////////////////
-
+breadcrumbs {
+  &.sticky {
+    top:118px !important;
+  }
+}
 .breadcrumbs {
   background: @c-light-grey;
   padding: 14px;
